[tool.poetry]
name = "parser-vacancy-hh-superjob"
version = "0.1.0"
description = ""
authors = ["alex <drofa528@bk.ru>"]
readme = "README.md"
packages = [{include = "parser_vacancy_hh_superjob"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
